Corrigindo erros de requisicao